--- a/src/Contact.css
+++ b/src/Contact.css
@@ -19,8 +19,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     font-family: 'Poppins', sans-serif;
-    margin: 6rem 27.1rem;
+    margin: 6rem 0rem;
 }
 
 .Contact__Form > input{
@@ -39,7 +40,6 @@
 
 .Contact__Form > button{
     margin-top: 1.2em;
-    margin-left: 10em;
     height: 3em;
     width: 10em;
     border: none;
@@ -47,4 +47,8 @@
     background-color: #7E66F7;
     color: #ffffff;
     font-weight: bold;
+}
+
+@media screen and (max-width: 768px){
+
 }
