--- a/src/HeaderContent.css
+++ b/src/HeaderContent.css
@@ -20,3 +20,22 @@
 .HeadingContent__Amount{
     color:rgb(86, 247, 86);
 }
+
+@media screen and (max-width: 768px){
+    .HeaderContent{
+        height: 107vh;
+        width: 100vw;
+    }
+
+    .HeaderContent__heading{
+        padding: 0em 1em;
+        font-size: 1em;
+
+    }
+
+    .HeaderContent__tagline{
+        margin-top: 1em;
+        font-size: 0.92em;
+    }
+    
+}
