--- a/src/Footer.css
+++ b/src/Footer.css
@@ -13,3 +13,10 @@
     font-weight: 800;
     font-size: 1.5em;
 }
+
+@media screen and (max-width: 600px){
+    .Footer > h3{
+        font-weight: 600;
+        font-size: 1em;
+    }   
+}
