--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -78,13 +78,14 @@ a:hover{
     .Mobilenavigation__Link{
         font-weight:400;
         color: black;
+        font-size: 10px;
     }
 
     .Mobilenavigation__button{
         background-color: #7366A1;
         border: none;
-        height: 1em;
-        width: 1em;
+        height: 10px;
+        width: 10px;
         color: white;
         cursor: pointer;
         font-size: 2px;
